[tool]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.poetry]
name = "toshi-hazard-post"
version = "0.6.0"
homepage = "https://github.com/GNS-Science/toshi-hazard-post"
description = "Hazard post-processing pipeline as serverless AWS infrastructure."
authors = ["GNS Science New Zealand <chrisbc@artisan.co.nz>"]
readme = "README.md"
license =  "AGPL-3.0"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

packages = [
    { include = "toshi_hazard_post" },
    { include = "tests", format = "sdist" },
    { include = "scripts" },
]

[tool.poetry.scripts]
thp = 'scripts.cli:thp'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.0.3"
click = "^8.1.8"
python-dotenv = "^1.0.1"
pyarrow = {version = ">=15.0", extras = ["pandas"]}
nzshm-common = "^0.8.4"
nzshm-model = "^0.13.5"
pydantic = "^2.10.6"
tomlkit = "^0.13.2"
numba = "<0.61.0"
toshi-hazard-store = "^1.1.0"
numpy = "<2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
twine = "^6.1.0"
bump2version = "^1.0.1"
types-toml = "^0.10.8.20240310"
types-requests = "^2.32.0.20241016"
tox = "^4.24.1"
mypy = "^1.15.0"
psutil = "^7.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-include-markdown-plugin = "^7.1.4"
mkdocs-material = "^9.6.5"
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^1.4.0"
mkdocs-pymdownx-material-extras = "^2.7"
pymdown-extensions = "^10.14.3"
mkdocstrings = "^0.28.2"
mkdocstrings-python = "^1.16.2"

[tool.poetry.extras]
aws = ["boto3"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--ignore=scratch"