[project]
name = "toshi-hazard-post"
version = "0.7.1"
readme = "README.md"
description = "Hazard post-processing pipeline as serverless AWS infrastructure."
authors = [
    {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
    {name = "Chris Chamberlain", email = "chrisbc@artisan.co.nz"},
]
license =  "AGPL-3.0"
requires-python = ">=3.10,<3.13"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]
dependencies = [
    "pandas>=2.0.3",
    "click>=8.1.8",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0,<21",
    "nzshm-common>=0.8.4",
    "nzshm-model>=0.13.5",
    "pydantic>=2.10.6",
    "tomlkit>=0.13.2",
    "numba>=0.60.0,<0.66",
    "toshi-hazard-store>=1.1.0",
    "numpy<2",
    "tzdata>=2025.2,<2027.0",
]

[project.optional-dependencies]
aws = ["boto3"]

[project.scripts]
thp = "scripts.cli:thp"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "twine>=6.1.0,<7.0.0",
    "bump2version>=1.0.1,<2.0.0",
    "types-toml>=0.10.8.20240310,<0.11.0.0",
    "types-requests>=2.32.0.20241016,<3.0.0.0",
    "tox>=4.24.1,<5.0.0",
    "tox-uv>=1.20.0",
    "mypy>=1.15.0,<2.0.0",
    "ruff>=0.6.0",
]
doc = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-include-markdown-plugin>=7.1.4,<8.0.0",
    "mkdocs-material>=9.6.5,<10.0.0",
    "mkdocs-material-extensions>=1.3.1,<2.0.0",
    "mkdocs-autorefs>=1.4.0,<2.0.0",
    "mkdocs-pymdownx-material-extras>=2.7,<3.0",
    "pymdown-extensions>=10.14.3,<11.0.0",
    "mkdocstrings>=0.28.2,<0.29.0",
    "mkdocstrings-python>=1.16.2,<2.0.0",
]

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { "nzshm-common" = false, "nzshm-model" = false, "toshi-hazard-store" = false }

[tool.hatch.build.targets.wheel]
packages = ["toshi_hazard_post", "scripts"]

[tool.hatch.build.targets.sdist]
include = ["toshi_hazard_post", "scripts", "tests"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "preserve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--ignore=scratch"
